# mission_control

./: README.md  meson.build  org.gnome.Mission_Control.json
data/: meson.build  org.gnome.Mission_Control.appdata.xml.in  org.gnome.Mission_Control.desktop.in  org.gnome.Mission_Control.gschema.xml
po/: POTFILES  meson.build
src/: main.c  meson.build  mission_control-window.c  mission_control-window.h  mission_control-window.ui  mission_control.gresource.xml
